Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -35,6 +35,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'apply'
+              commandOptions: '-auto-approve'
               workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
               environmentServiceNameAzureRM: '$(serviceConn)'
 
