Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -30,7 +30,7 @@ stages:
               backendAzureRmKey: 'terraform.tfstate'
 
           #Terraform Apply
-          - task: TerraformCLI@0
+          - task: TerraformTaskV2@2
             displayName: 'Apply'
             inputs:
               provider: 'azurerm'
