Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -16,8 +16,7 @@ stages:
     pool: $(poolName)
     steps:
       #Terraform Init
-    - bash: ls $(projectRoot)
-
+    - checkout: self
     - task: TerraformTaskV2@2
       displayName: 'Initiation'
       inputs:
